--- a/src/main/resources/application-test.yml
+++ b/src/main/resources/application-test.yml
@@ -8,5 +8,11 @@ spring:
     username: test
     password: test
 
+  jpa:
+    database-platform: org.hibernate.dialect.H2Dialect
+    hibernate:
+      ddl-auto: create-drop
+    show-sql: false
+
   jackson:
     property-naming-strategy: SNAKE_CASE
